[package]
name = "rust-arduino-blink"
version = "0.1.0"

[build]
target = "avr-atmega328p.json"

[unstable]
build-std = ["core"]

[dependencies]
panic-halt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "92d540c"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"